--- a/TODO.txt
+++ b/TODO.txt
@@ -1,11 +1,11 @@
 InvestmentBuilderWeb TODO 19-10-2016
 
-1. Wire in BuildReport button
-2. Add account management page.
+1. Wire in BuildReport button NEARLY DONE
+2. Add account management page. DONE
 3  Add redemptions page 
 4. Add undo last transaction button
-5. add new navbar dropdown to allow user to navigate to these pages
-6. fix datetime picker display on date fields
+5. add new navbar dropdown to allow user to navigate to these pages DONE
+6. fix datetime picker display on date fields DONE
 7. add previous months cash flow in cash flow view
-8. add previous months reports in reports view9. fix client side validation
+8. add previous months reports in reports view9. fix client side validation 
 9. tidy up header bar
