--- a/TODO.txt
+++ b/TODO.txt
@@ -9,3 +9,4 @@ InvestmentBuilderWeb TODO 19-10-2016
 7. add previous months cash flow in cash flow view
 8. add previous months reports in reports view9. fix client side validation 
 9. tidy up header bar
+10. add year to date field in pdf report. tidy up report
