--- a/TODO.txt
+++ b/TODO.txt
@@ -1,12 +1,12 @@
 InvestmentBuilderWeb TODO 19-10-2016
 
-1. Wire in BuildReport button NEARLY DONE
+1. Wire in BuildReport button DONE
 2. Add account management page. DONE
 3  Add redemptions page 
 4. Add undo last transaction button
 5. add new navbar dropdown to allow user to navigate to these pages DONE
 6. fix datetime picker display on date fields DONE
-7. add previous months cash flow in cash flow view
-8. add previous months reports in reports view9. fix client side validation 
+7. add previous months cash flow in cash flow view DONE
+8. add previous months reports in reports view9. fix client side validation DONE
 9. tidy up header bar
-10. add year to date field in pdf report. tidy up report
+10. add year to date field in pdf report. tidy up report DONE
