--- a/TODO.txt
+++ b/TODO.txt
@@ -3,7 +3,7 @@ InvestmentBuilderWeb TODO 19-10-2016
 1. Wire in BuildReport button DONE
 2. Add account management page. DONE
 3  Add redemptions page 
-4. Add undo last transaction button
+4. Add undo last transaction button DONE
 5. add new navbar dropdown to allow user to navigate to these pages DONE
 6. fix datetime picker display on date fields DONE
 7. add previous months cash flow in cash flow view DONE
