--- a/TODO.txt
+++ b/TODO.txt
@@ -1,8 +1,20 @@
 InvestmentBuilder TODO 03-07-2018
 
-1  Add redemptions page 
-2. tidy up header bar
-3. tidy up account summary bar
-4. refactor schema to add a userid into accounts table so account can be indexed on userid - account name
-5. InvestmentBuilderWebCLient - Copy completed report to shared destination. Send link to report back in completed response.
+1  Add redemptions page DONE
+2. tidy up header bar DONE
+3. tidy up account summary bar DONE
+4. refactor schema to add a userid into accounts table so account can be indexed on userid - account name DONE
+5. InvestmentBuilderWebCLient - Copy completed report to shared destination. Send link to report back in completed response. DONE
+
+bugs
+1. Investment Summary not updated after build completed. Only updates the next day. DONE
+2. Delete button for cash transaction not working (again!!!) DONE
+
+TODO 23-05-2019
+1. setup email server for forgotton passwords etc..
+2. test everything with new user (possibly create and maintain a few dummy accounts)
+3. test with another argyll investments user
+4. replace php with python
+5. add ROI per investment to investment report
+6. explore possibilities of obtaining / deriving more data for investment reports. for example, sector information for each investment.
 
